--- a/htdocs/map/nextgen.css
+++ b/htdocs/map/nextgen.css
@@ -1,11 +1,29 @@
 html,
 body {
-  overflow-x: hidden; /* Prevent scroll on narrow devices */
-}
-body {
-  padding-top: 70px;
+	height:100%;
+	overflow-x: hidden; /* Prevent scroll on narrow devices */
 }
 
+.modal .modal-body {
+    max-height: 420px;
+    overflow-y: auto;
+}
+.ui-datepicker-month{
+	color: #000 !important;
+}
+.ui-datepicker-year{
+	color: #000 !important;
+}
+.ui-widget{
+    font-size: 1em !important;
+}
+		.dp {
+     border: 0px;
+font-weight: bolder;
+font-size: 1.3em;
+width: 149px;
+float: left;
+     }
   .row-offcanvas {
     position: relative;
     -webkit-transition: all .25s ease-out;
@@ -37,12 +55,7 @@ body {
          -o-transition: all .25s ease-out;
             transition: all .25s ease-out;
   }
-html,body {
-		height:100%;
-}
-body {
-	padding-top: 0px !important;
-}
+
 .container-fluid {
 	z-index: 2;
     height:100%;
@@ -61,7 +74,6 @@ body {
 }
 #map {
 	z-index: 2;
-	background-color: #00f;
 }
 #sidebar {
 	margin: 0px;
@@ -113,13 +125,15 @@ body {
 	position: absolute;
 	bottom: 0px;
 	width: 100%;
-	background: rgba(0,0,0,0.8);
 	color: #FFF;
 	font-weight: bold;
 	font-size: 1.2em;
 	padding-left: 20px;
 	padding-right: 20px;
 	z-index: 1000;
+}
+#fdetails .fshaded {
+	background: rgba(0,0,0,0.8);
 }
 #fdetails span {
 	color: #0ff;
