--- a/htdocs/map/nextgen.css
+++ b/htdocs/map/nextgen.css
@@ -17,10 +17,9 @@ body {
 .ui-widget{
     font-size: 1em !important;
 }
-		.dp {
-     border: 0px;
+.dp {
+border: 0px;
 font-weight: bolder;
-font-size: 1.3em;
 width: 149px;
 float: left;
      }
@@ -47,8 +46,8 @@ float: left;
   }
   
     .sidebar-offcanvas {
-    z-index: 3;
-    position: absolute;
+	z-index: 1004;
+	position: absolute;
     top: 0;
     width: 300px; /* 6 columns */
     -webkit-transition: all .25s ease-out;
@@ -57,16 +56,14 @@ float: left;
   }
 
 .container-fluid {
-	z-index: 2;
-    height:100%;
+	height:100%;
     width: 100%;
     padding: 0px !important;
     margin: 0px !important;
 }
 
 .fill{
-	z-index: 2;
-    width:100%;
+	width:100%;
     height:100%;
     min-height:100%;
     padding: 0px !important;
@@ -97,29 +94,26 @@ float: left;
 .btn-sq-sm {
   width: 50px !important;
   height: 50px !important;
-}
-.btn-sq-sm i{
-  font-size: 28px !important;
+  font-size: 2em !important;
+  z-index: 1003;
 }
 
 #colorbar {
 	position: absolute;
-	left: 1em;
-	top: 8em;
+	left: 0px;
+	top: 30px;
 	background: rgba(0,0,0,0.8);
 	z-index: 1000;	
 }
-#maptitle {
+#maptitlediv {
 	position: absolute;
 	top: 0px;
-	left: 5em;
+	left: 0px;
 	background: rgba(0,0,0,0.8);
 	color: #FFF;
 	font-weight: bold;
-	font-size: 1.2em;
-	padding-left: 20px;
-	padding-right: 20px;
-	z-index: 1000;
+	padding: 5px;
+	z-index: 1001;
 }
 #fdetails {
 	position: absolute;
@@ -130,11 +124,46 @@ float: left;
 	font-size: 1.2em;
 	padding-left: 20px;
 	padding-right: 20px;
-	z-index: 1000;
+	z-index: 1002;
 }
 #fdetails .fshaded {
 	background: rgba(0,0,0,0.8);
 }
 #fdetails span {
 	color: #0ff;
+}
+
+/* xs < 768 */
+@media screen and (max-width: 767px) {
+    body {
+        font-size: 1.2em;
+    }
+}
+
+/* sm */
+@media screen and (min-width: 768px) {
+    body {
+        font-size: 1em;
+    }
+}
+
+/* md */
+@media screen and (min-width: 992px) {
+    body {
+        font-size: 1.2em;
+    }
+}
+
+/* lg */
+@media screen and (min-width: 1200px) {
+    body {
+        font-size: 1.3em;
+    }
+}
+#ls-overlay-layers {
+	padding-left: 20px;
+}
+
+#ls-base-layers {
+	padding-left: 20px;
 }
